hard-gists/504232/run.log
=== Docker Run Log for 504232 ===
Started at: Mi 29. Okt 15:19:50 CET 2025

[2025-10-29 15:19:50] START: Running container for 504232
[2025-10-29 15:19:51] SUCCESS: Container a04d3a0dd40032552aa2a3c766cb3cc5f3de602549930559008f087377c4493c started for 504232
=== Container logs for 504232 ===
  File "/snippet.py", line 11
    quote_re = re.compile(ur'\s{0,4}[>|\}]')
                            ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
=== End of logs for 504232 ===
[2025-10-29 15:19:53] INFO: Container a04d3a0dd40032552aa2a3c766cb3cc5f3de602549930559008f087377c4493c has stopped
